# quickfast

./: .gitignore  README.md  bootstrap.sh  configure.ac
src/: Makefile.am
src/Examples/: Makefile.am
src/Tests/: Makefile.am  testPresenceMap.cpp
