SUBDIRS = . Examples Tests

if GCC
NO_OPT_CXXFLAGS = $(PTHREAD_CFLAGS) -Wall -Wwrite-strings -Woverloaded-virtual -Wno-sign-compare
else
NO_OPT_CXXFLAGS = $(PTHREAD_CFLAGS)
endif

AM_CXXFLAGS = $(NO_OPT_CXXFLAGS)
AM_LDFLAGS = $(PTHREAD_CFLAGS)

clean-local:
	rm -f *.loT

MAINTAINERCLEANFILES = \
    Makefile.in

nobase_include_HEADERS = \
    Communication/MulticastSender_fwd.h \
    Communication/LinkedBuffer_fwd.h \
    Communication/AtomicQueue_fwd.h \
    Communication/PCapFileReceiver_fwd.h \
    Communication/BufferQueue_fwd.h \
    Communication/SynchReceiver.h \
    Communication/Sender_fwd.h \
    Communication/Receiver_fwd.h \
    Communication/TCPReceiver.h \
    Communication/BufferedRawFileReceiver.h \
    Communication/BufferedRawFileReceiver_fwd.h \
    Communication/AsynchFileReceiver.h \
    Communication/Assembler.h \
    Communication/RawFileReceiver_fwd.h \
    Communication/AsynchReceiver.h \
    Communication/PCapReader.h \
    Communication/AsioService_fwd.h \
    Communication/SingleServerBufferQueue.h \
    Communication/BufferRecycler.h \
    Communication/AsynchSender.h \
    Communication/LinkedBuffer.h \
    Communication/RawFileReceiver.h \
    Communication/SynchReceiver_fwd.h \
    Communication/FileSender_fwd.h \
    Communication/AsynchFileSender_fwd.h \
    Communication/Assembler_fwd.h \
    Communication/MulticastSender.h \
    Communication/RecoveryFeed.h \
    Communication/AsioService.h \
    Communication/AtomicQueue.h \
    Communication/MulticastReceiverHandle.h \
    Communication/MulticastReceiver_fwd.h \
    Communication/BufferReceiver.h \
    Communication/TCPReceiver_fwd.h \
    Communication/AsynchReceiver_fwd.h \
    Communication/PCapFileReceiver.h \
    Communication/BufferQueue.h \
    Communication/AsynchFileReceiver_fwd.h \
    Communication/MulticastReceiver.h \
    Communication/FileSender.h \
    Communication/SingleServerBufferQueue_fwd.h \
    Communication/AsynchSender_fwd.h \
    Communication/Sender.h \
    Communication/AsynchFileSender.h \
    Communication/RecoveryFeed_fwd.h \
    Communication/BufferReceiver_fwd.h \
    Communication/Receiver.h \
    Messages/FieldUInt64.h \
    Messages/FieldUtf8.h \
    Messages/Message_fwd.h \
    Messages/SequentialSingleValueBuilder.h \
    Messages/Sequence_fwd.h \
    Messages/FieldAscii.h \
    Messages/FieldUInt32.h \
    Messages/FieldInt8.h \
    Messages/ValueMessageBuilder.h \
    Messages/FieldInt64.h \
    Messages/SingleValueBuilder.h \
    Messages/MessageFormatter.h \
    Messages/FieldSet.h \
    Messages/SpecialAccessors.h \
    Messages/MessageAccessor.h \
    Messages/MessageBuilder_fwd.h \
    Messages/FieldInt32.h \
    Messages/Group_fwd.h \
    Messages/FieldIdentity.h \
    Messages/FieldSequence.h \
    Messages/Field.h \
    Messages/ValueMessageBuilder_fwd.h \
    Messages/Message.h \
    Messages/Group.h \
    Messages/FieldByteVector.h \
    Messages/FieldUInt8.h \
    Messages/MessageBuilder.h \
    Messages/FieldDecimal.h \
    Messages/FieldGroup.h \
    Messages/FieldString.h \
    Messages/FieldUInt16.h \
    Messages/FieldInt16.h \
    Messages/Sequence.h \
    Messages/Field_fwd.h \
    Messages/FieldSet_fwd.h \
    Messages/FieldIdentity_fwd.h \
    Messages/MessageField.h \
    Messages/MessageField_fwd.h \
    Tests/FieldInstructionMock.h \
    Codecs/FieldInstructionTemplateRef.h \
    Codecs/FieldOpIncrement.h \
    Codecs/DataSource_fwd.h \
    Codecs/FieldInstruction_fwd.h \
    Codecs/PresenceMap.h \
    Codecs/FieldInstructionInt16.h \
    Codecs/SchemaElement_fwd.h \
    Codecs/MulticastDecoder_fwd.h \
    Codecs/Encoder_fwd.h \
    Codecs/DataSourceBuffer.h \
    Codecs/XMLTemplateParser_fwd.h \
    Codecs/FieldInstructionBlob.h \
    Codecs/FieldOp_fwd.h \
    Codecs/FieldInstructionInteger.h \
    Codecs/FieldOp.h \
    Codecs/HeaderAnalyzer.h \
    Codecs/FieldInstructionUInt64.h \
    Codecs/Template_fwd.h \
    Codecs/Encoder.h \
    Codecs/MulticastDecoder.h \
    Codecs/FieldInstruction.h \
    Codecs/FieldInstructionAscii.h \
    Codecs/SchemaElement.h \
    Codecs/DataDestinationString.h \
    Codecs/PacketSequencingAssembler.h \
    Codecs/FieldInstructionExponent.h \
    Codecs/FieldInstructionInt32.h \
    Codecs/StreamingAssembler.h \
    Codecs/BasePacketAssembler_fwd.h \
    Codecs/FieldInstructionMantissa.h \
    Codecs/DataSourceBufferedStream.h \
    Codecs/SynchronousDecoder.h \
    Codecs/TemplateRegistry_fwd.h \
    Codecs/FieldInstructionUInt8.h \
    Codecs/FieldInstructionDecimal.h \
    Codecs/FieldInstructionByteVector.h \
    Codecs/FieldInstructionUInt16.h \
    Codecs/MessagePerPacketAssembler.h \
    Codecs/DataSourceString.h \
    Codecs/BasePacketAssembler.h \
    Codecs/FixedSizeHeaderAnalyzer.h \
    Codecs/PresenceMap_fwd.h \
    Codecs/DictionaryIndexer_fwd.h \
    Codecs/DataDestination_fwd.h \
    Codecs/DataSource.h \
    Codecs/XMLTemplateParser.h \
    Codecs/DataSourceStream.h \
    Codecs/FieldOpDefault.h \
    Codecs/MessagePerPacketAssembler_fwd.h \
    Codecs/SingleMessageConsumer.h \
    Codecs/MessageConsumer.h \
    Codecs/FastEncodedHeaderAnalyzer.h \
    Codecs/FieldInstructionGroup.h \
    Codecs/FieldOpDelta.h \
    Codecs/NoHeaderAnalyzer.h \
    Codecs/FieldOpNop.h \
    Codecs/FieldInstructionInt8.h \
    Codecs/TemplateRegistry.h \
    Codecs/SegmentBody.h \
    Codecs/HeaderAnalyzer_fwd.h \
    Codecs/MessageConsumer_fwd.h \
    Codecs/SegmentBody_fwd.h \
    Codecs/PacketSequencingAssembler_fwd.h \
    Codecs/DataDestination.h \
    Codecs/GenericMessageBuilder.h \
    Codecs/FieldInstructionUInt32.h \
    Codecs/FieldOpCopy.h \
    Codecs/FieldOpConstant.h \
    Codecs/FieldOpTail.h \
    Codecs/Context_fwd.h \
    Codecs/DictionaryIndexer.h \
    Codecs/FieldInstructionInt64.h \
    Codecs/Decoder.h \
    Codecs/Template.h \
    Codecs/Context.h \
    Codecs/Decoder_fwd.h \
    Codecs/FieldInstructionSequence.h \
    Codecs/FieldInstructionUtf8.h \
    Application/DecoderConfiguration_fwd.h \
    Application/DNDecoderConnectionImpl_fwd.h \
    Application/DecoderConnection_fwd.h \
    Application/DNDecoderConnectionImpl.h \
    Application/DecoderConnection.h \
    Application/DecoderConfiguration.h \
    Application/CommandArgHandler.h \
    Application/QuickFAST.h \
    Application/CommandArgParser.h \
    Common/Constants.h \
    Common/AtomicOps.h \
    Common/Profiler.h \
    Common/Logger_fwd.h \
    Common/Value_fwd.h \
    Common/Version.h \
    Common/Decimal.h \
    Common/ByteSwapper.h \
    Common/StringBuffer.h \
    Common/BitMap.h \
    Common/Logger.h \
    Common/WorkingBuffer.h \
    Common/AtomicPointer.h \
    Common/Value.h \
    Common/Decimal_fwd.h \
    Common/Types.h \
    Common/QuickFAST_Export.h \
    Common/Exceptions.h \
    Common/AtomicCounter.h \
    Common/QuickFASTPch.h

lib_LTLIBRARIES = libQuickFAST.la

libQuickFAST_la_LIBADD = $(PTHREAD_LIBS)
libQuickFAST_la_CPPFLAGS= -Werror
libQuickFAST_la_LDFLAGS = -export-dynamic -no-undefined
libQuickFAST_la_SOURCES = \
    Communication/FileSender.cpp \
    Communication/AsynchSender.cpp \
    Communication/AsynchFileSender.cpp \
    Communication/MulticastReceiverHandle.cpp \
    Communication/AsioService.cpp \
    Communication/PCapReader.cpp \
    Messages/FieldString.cpp \
    Messages/FieldDecimal.cpp \
    Messages/FieldInt32.cpp \
    Messages/FieldByteVector.cpp \
    Messages/FieldIdentity.cpp \
    Messages/FieldAscii.cpp \
    Messages/FieldSet.cpp \
    Messages/FieldInt16.cpp \
    Messages/MessageAccessor.cpp \
    Messages/FieldUInt16.cpp \
    Messages/Message.cpp \
    Messages/FieldInt8.cpp \
    Messages/FieldInt64.cpp \
    Messages/FieldUtf8.cpp \
    Messages/FieldUInt8.cpp \
    Messages/Field.cpp \
    Messages/FieldUInt64.cpp \
    Messages/FieldGroup.cpp \
    Messages/FieldSequence.cpp \
    Messages/FieldUInt32.cpp \
    Messages/MessageBuilder.cpp \
    Messages/MessageFormatter.cpp \
    Codecs/SingleMessageConsumer.cpp \
    Codecs/FieldOpDefault.cpp \
    Codecs/FieldInstruction.cpp \
    Codecs/DataSourceBufferedStream.cpp \
    Codecs/PacketSequencingAssembler.cpp \
    Codecs/PresenceMap.cpp \
    Codecs/FieldInstructionUtf8.cpp \
    Codecs/GenericMessageBuilder.cpp \
    Codecs/FieldInstructionGroup.cpp \
    Codecs/SegmentBody.cpp \
    Codecs/FieldOpCopy.cpp \
    Codecs/BasePacketAssembler.cpp \
    Codecs/MessagePerPacketAssembler.cpp \
    Codecs/Encoder.cpp \
    Codecs/StreamingAssembler.cpp \
    Codecs/DataSourceString.cpp \
    Codecs/FixedSizeHeaderAnalyzer.cpp \
    Codecs/DataSourceBuffer.cpp \
    Codecs/FieldOpDelta.cpp \
    Codecs/Context.cpp \
    Codecs/FieldOp.cpp \
    Codecs/FieldInstructionByteVector.cpp \
    Codecs/FieldOpIncrement.cpp \
    Codecs/Template.cpp \
    Codecs/FastEncodedHeaderAnalyzer.cpp \
    Codecs/FieldOpConstant.cpp \
    Codecs/FieldInstructionDecimal.cpp \
    Codecs/MulticastDecoder.cpp \
    Codecs/FieldInstructionBlob.cpp \
    Codecs/FieldInstructionTemplateRef.cpp \
    Codecs/DataSourceStream.cpp \
    Codecs/DataSource.cpp \
    Codecs/DictionaryIndexer.cpp \
    Codecs/SchemaElement.cpp \
    Codecs/FieldInstructionSequence.cpp \
    Codecs/XMLTemplateParser.cpp \
    Codecs/FieldOpTail.cpp \
    Codecs/TemplateRegistry.cpp \
    Codecs/Decoder.cpp \
    Codecs/FieldInstructionAscii.cpp \
    Application/DecoderConnection.cpp \
    Application/CommandArgParser.cpp \
    Application/DNDecoderConnectionImpl.cpp \
    Common/dllmain.cpp \
    Common/BitMap.cpp \
    Common/WorkingBuffer.cpp \
    Common/Decimal.cpp \
    Common/Profiler.cpp \
    Common/Types.cpp \
    Common/QuickFASTPch.cpp

